# LinPlayer

./: .flutter-plugins-dependencies  .gitattributes  .gitignore  DESIGN.md  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.github/workflows/: build-ffmpeg.yml  build-libass.yml  build-libmpv-pgs.yml  build.yml  deploy-site.yml  publish.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  linass_jni.cpp
android/exoplayer-ffmpeg/: Dockerfile  build.gradle.kts  build_ffmpeg_android.sh
apple_tv/: PLAYER_KERNELS.md
apple_tv/LinPlayerTV/: RootView.swift
docs/: BACKUP_FORMAT.md  FFmpegExtensionSetup.md  SECURITY_AUDIT_2026-06-20.md
ios/Runner/: Info.plist
lib/: README.md  app.dart  main.dart
lib/core/: app_identity.dart
lib/core/utils/: cn.dart  (+6 more)
lib/desktop/: desktop_app.dart
lib/routes/: app_router.dart
lib/tv/: tv_app.dart
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
oauth-proxy/: .dev.vars.example
oauth-proxy/functions/: _middleware.js
oauth-proxy/site/: .gitignore  _config.fluid.yml  _config.yml  package-lock.json  package.json
scripts/: fetch_mihomo_tv.ps1
test/: config_transfer_test.dart  danmaku_anime_gate_test.dart  subtitle_track_matcher_test.dart
tool/: tmdb_encrypt.dart
windows/patches/: libmpv-win32-video-build-hdmv_pgs_subtitle.patch
windows/runner/: CMakeLists.txt  flutter_window.cpp  flutter_window.h  main.cpp
(+193 files in other folders)
